
 XGngeo - Changelog
~~~~~~~~~~~~~~~~~~~~

* Changes in version 16 (2006-XX-XX):

- LICENSE.txt updated (because the FSF adress are old) [Achraf cherti]
- Long name for all new history entry [Achraf cherti] 
- xgngeo.desktop : Freedesktop.org menu entry [Achraf cherti]
- Optional use of Psyco (if module is available) to boost
XGngeo's overall speed performance [Achraf Cherti].
- Bug fix: no more crash when removing an entry which was below
a just removed one in the ROM History menu [Achraf Cherti].
- Improved ROM list refreshing feature (now applied just after
having updated the ROM directory list).
- Increased ROM list displaying speed (especialy when ``Show
available ROM only"option is enabled).
- Bug fix: multiple custom ROM directory paths were considered
as one single big path because of lack of line break in the
related configuration file [patch by Achraf Cherti].
- Several code style improvement.

Yet present in the beta version:
- Improved ROM detection in the list and file selection
dialog (now directly based upon Gngeo's scaning results:
faster and more accurate!).
- ROM list now supports multiple ROM directories.
- New hot keys configuration support, for the 2 players.
- You can now see a ROM preview image (if activated) when
loading using the file selection dialog.
- New options support: `68kclock', `bench', `hwsurface',
`transpack', `z80clock', `sleepidle'.
- Visual indication of unavaible ROM and ability to remove
entries in the History menu.
- Added possibility to select the new Universal BIOS.
- Added comments and general layout preservative writting
method for the `gngeorc' file.
- Better guessing of the default path to Gngeo's `romrc' file.
- Added possibility to choose XGngeo window to be centered on
the screen on start.
- Bugfix: no more problem in the Rom list with some PyGTK ins-
tallations. 
- Various GUI enhancements.
- Added checking for the PyGTK version (must be 2.6 or more).
- Minimum accepted Gngeo version setted to 0.6.11 (current :p).